Bugfix Linux packaging jni since session status management

--- a/packaging/linux/ovd-java-jni-32/package.conf
+++ b/packaging/linux/ovd-java-jni-32/package.conf
@@ -7,6 +7,9 @@ pre_sources_commads:
   
   - javah -classpath @SVN_ROOT@/client/java/src -d ./src/ org.ulteo.utils.jni.WorkArea
 
+  - javac -sourcepath @SVN_ROOT@/client/java/src @SVN_ROOT@/client/java/src/org/ulteo/utils/jni/LinuxSessionStatus.java
+  - javah -classpath @SVN_ROOT@/client/java/src -d ./src/ org.ulteo.utils.jni.LinuxSessionStatus
+
 compile_commands:
   - make -s STATIC=yes
 
