--- a/SessionManager/scripts/sm-config.in
+++ b/SessionManager/scripts/sm-config.in
@@ -130,7 +130,7 @@ while [ -z "$PASS" ]; do
 done
 
 if [ -z "$NODOWNLOAD" ]; then
-    PROPOSED_URL='http://www.ulteo.com/main/downloads/ulteo-ovd.php?suite=3.0'
+    PROPOSED_URL='@CHROOT_URL@'
     PROPOSED_TARGET=$BASEDIR/base.tar.gz
     if [ -z "$URI" ]; then
         echo -n "Chroot download url [$PROPOSED_URL]: "
