--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -6,6 +6,7 @@
 # Author Laurent CLOUET <laurent@ulteo.com> 2010
 # Author Jocelyn DELALANDE <j.delalande@ulteo.com> 2012
 # Author Julien LANGLOIS <julien@ulteo.com> 2013
+# Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -82,6 +83,12 @@ else
     AC_SUBST(DISTCHECK_CONFIGURE_FLAGS)
 fi
 
+#################################################
+###              premium edition              ###
+AC_ARG_ENABLE([premium],
+    AS_HELP_STRING([--enable-premium], [Enable premium session manager]))
+
+
 AC_CONFIG_FILES([
 Makefile
 config/Makefile
@@ -132,4 +139,13 @@ web/events/callbacks/ServerStatusChanged/Makefile
 web/events/callbacks/SqlFailure/Makefile
 examples/Makefile
 ])
+
+AS_IF([test "x$enable_premium" = "xyes"], [
+    AC_CONFIG_FILES([@PREMIUM_MK@])
+    MAYBE_PREMIUM=premium
+], [
+    MAYBE_PREMIUM=
+])
+AC_SUBST([MAYBE_PREMIUM])
+
 AC_OUTPUT
