--- a/SessionManager/web/Makefile.am
+++ b/SessionManager/web/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS = admin \
           includes \
           modules \
           PEAR \
+          $(MAYBE_PREMIUM) \
           webservices
 
 scriptsdir = $(datadir)/ulteo/sessionmanager
