--- a/packaging/windows/setup-aps/setup.conf
+++ b/packaging/windows/setup-aps/setup.conf
@@ -22,6 +22,14 @@ arch:
         jre:
           extern:
             - jre
+        libjni:
+          childs:
+            "32":
+              packages:
+                - ovd-jni-rdp-32
+            "64":
+              packages:
+                - ovd-jni-rdp-64
     
     vcredist:
       extern:
