--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -11,7 +11,8 @@
  Author Guillaume DUPAS <guillaume@ulteo.com> 2010
  Author Yann HODIQUE <y.hodique@ulteo.com> 2012
  Author David PHAM-VAN <d.pham-van@ulteo.com> 2012, 2013
-
+ Author Vincent ROULLIER <v.roullier@ulteo.com> 2013
+ 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; version 2
@@ -372,6 +373,16 @@
           todir="build/resources/LinuxLibs/32" failonerror="false" />
     <copy file="required_libraries/libPCSC/32/libPCSC.dll"
           todir="build/resources/WindowsLibs/32" failonerror="false" />
+    <copy file="required_libraries/librdp/64/librdp.so"
+          todir="build/resources/LinuxLibs/64" failonerror="false" />
+    <copy file="required_libraries/libjpeg.so.62"
+          todir="build/resources/LinuxLibs/64" failonerror="false" />
+    <copy file="required_libraries/librdp/64/librdp.dll"
+          todir="build/resources/WindowsLibs/64" failonerror="false" />
+    <copy file="required_libraries/librdp/32/librdp.so"
+          todir="build/resources/LinuxLibs/32" failonerror="false" />
+    <copy file="required_libraries/librdp/32/librdp.dll"
+          todir="build/resources/WindowsLibs/32" failonerror="false" />
     <copy file="required_libraries/jshortcut.dll"
           todir="build/resources/WindowsLibs/32" failonerror="false" />
     <copy file="required_libraries/ICE_JNIRegistry.dll"
@@ -447,6 +458,7 @@
         <include name="windowsPathsJNI/*" />
         <include name="libXClientArea/**" />
         <include name="libPCSC/**" />
+        <include name="librdp/**" />
       </fileset>
     </copy>
     <tar destfile="${distdir}/${sdist.name}.tar" longfile="gnu"
