--- a/packaging/debian/ovd-java-clients/lucid/control
+++ b/packaging/debian/ovd-java-clients/lucid/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
 Build-Depends: debhelper (>= 6), cdbs, ulteo-ovd-cert,
- default-jdk, ant, ant-optional, mingw32, libx11-dev, icedtea-plugin | icedtea6-plugin
+ default-jdk, ant, ant-optional, mingw32, libx11-dev, libjpeg62-dev, cmake,  icedtea-plugin | icedtea6-plugin
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-applets
@@ -15,7 +15,7 @@ Description: Ulteo Open Virtual Desktop - applets
 Package: ulteo-ovd-externalapps-client
 Architecture: all
 Depends: default-jre | sun-java6-jre, cups-bsd | lpr,
- libovd-xclient-area, desktop-file-utils
+ libovd-xclient-area, desktop-file-utils, libovd-accelerator
 Recommends: ulteo-ovd-integrated-launcher
 Description: Ulteo Open Virtual Desktop - integrated client
  This application is used in the Open Virtual Desktop to display the user
@@ -27,3 +27,9 @@ Depends: ${shlibs:Depends}
 Description: X Client area library
  Detect docks / taskbars and calculate the available size for X window
  applications area
+
+Package: libovd-accelerator
+Architecture: any
+Depends: ${shlibs:Depends}
+Description: Ovd Client optimization library
+ Compression algorithm in jni library
