--- a/packaging/windows/setup-native-client-standalone/setup.conf
+++ b/packaging/windows/setup-native-client-standalone/setup.conf
@@ -11,3 +11,11 @@ arch:
     jre:
       extern:
         - jre
+    lib:
+      childs:
+        "32":
+          packages:
+            - ovd-jni-rdp-32
+        "64":
+          packages:
+            - ovd-jni-rdp-64
