--- a/packaging/windows/setup-native-client/setup.conf
+++ b/packaging/windows/setup-native-client/setup.conf
@@ -4,3 +4,13 @@ arch:
     - ovd-native-client
     - ovd-integrated-launcher
     - ovd-java-jni
+
+  childs:
+    lib:
+      childs:
+        "32":
+          packages:
+            - ovd-jni-rdp-32
+        "64":
+          packages:
+            - ovd-jni-rdp-64
