--- a/packaging/debian/ovd-slaveserver/lucid/control
+++ b/packaging/debian/ovd-slaveserver/lucid/control
@@ -18,7 +18,7 @@ Package: ulteo-ovd-slaveserver-role-aps
 Architecture: all
 Depends: ${python:Depends},
  ulteo-ovd-slaveserver, ulteo-ovd-shells, ulteo-ovd-externalapps-client,
- xrdp-python, xrdp-seamrdp, xrdp-rdpdr, xrdp-printer, xrdp-sound, xrdp-clipboard,
+ uxda-server-python, uxda-server-seamrdp, uxda-server-rdpdr, uxda-server-printer, uxda-server-sound, uxda-server-clipboard,
  desktop-file-utils, imagemagick, passwd, adduser, rsync, smbfs, python-xdg,
  ulteo-ovd-regular-union-fs
 Recommends: tmpreaper
