Improve Vapp doc with screenshots and how to install Vapp on Vmware and VirtualBox

--- a/docs/img/virtualappliance/Makefile
+++ b/docs/img/virtualappliance/Makefile
@@ -2,7 +2,17 @@
 DATA=\
 	shell.png \
 	welcome.png \
-
+        vmware-1.png \
+        vmware-2.png \
+        vmware-3.png \
+        vmware-4.png \
+        vmware-5.png \
+        import_ova_vbox1.png \
+        import_ova_vbox2.png \
+        import_ova_vbox3.png \
+        import_ova_vbox4.png \
+        import_ova_vbox5.png \
+        import_ova_vbox6.png 
 all:
 
 install:
