Improvement: add webapps configuration file example

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -103,3 +103,18 @@ level = error warn info debug
 # FSBackendConf =
 # configuration path of the FS Backend (Union FS)
 # defaulf is /etc/ulteo/rufs/FSBackend.conf
+
+[WebApps]
+# address = 0.0.0.0
+# port = 8443
+# connection_timeout = 60
+# http_max_header_size = 2048
+# max_process = 10
+# max_connection = 100
+# process_timeout = 60
+# chunk_size = 8192
+# ulteo_session_cookie = ulteo_sess
+# connection_secure = false
+# timeout_page = /etc/ulteo/ovd/timeout_page.html
+# invalid_cert_page = etc/ulteo/ovd/invalid_cert_page.html
+
