Improvement: add a new mode in order to deliver webapps. This mode is based on path. The mode base on domain still exist

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -105,6 +105,15 @@ level = error warn info debug
 # defaulf is /etc/ulteo/rufs/FSBackend.conf
 
 [WebApps]
+# mode = path
+# mode define the way to deliver webapps. (domain or path)
+#  domain: each webapp is defined as a name registered in the dns.
+#          You need all webapps registered in your DNS
+#          ex: 'app1.webappserver.local' refers to a webapps app1 managed by the webapps server webappserver.local
+#  path: each webapp is defined as a path in the webapp server
+#          ex: webappserver.local/webapp/app1 refers to a webapps app1 managed by the webapps server webappserver.local
+# default mode is path
+
 # address = 0.0.0.0
 # port = 8443
 # connection_timeout = 60
