Feature: add possibility to use webapps through gateway

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -73,6 +73,10 @@ level = error warn info debug
 # determine the OVD Web Client address
 # default value is empty, so the web client is not redirected
 
+# webapps_redirection = true|false
+# enable the web applications redirection
+# default value is 'true'
+
 # admin_redirection = true|false
 # enable the web admin redirection
 # default value is 'false'
