--- a/client/web/web/media/script/uovd/provider/webapps/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/webapps/Makefile.am
@@ -1,5 +1,6 @@
 scripts_DATA = base.js \
                proxy.js \
+               direct.js \
                jsonp.js
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script/uovd/provider/webapps
