Modify SM client apache rewrite rule: now forbid access when ask .php resources directly (/ovd/client/start.php). But still transform /ovd/client/start to /ovd/client/start.php to match the script name

--- a/SessionManager/config/apache2.conf.in
+++ b/SessionManager/config/apache2.conf.in
@@ -12,7 +12,11 @@ Alias /ovd/client @DATADIR@/ulteo/sessionmanager/client
     RewriteEngine On
     RewriteBase /ovd/client/
 
-    # Add .php at the end of the request if not exists
+    # Deny requests containing .php
+    RewriteCond %{THE_REQUEST} ^.+?\ [^?]+\.php[?\ ]
+    RewriteRule \.php$ - [F]
+
+    # Add .php at the end of the request
     RewriteCond %{REQUEST_URI}  !^.+\.php$
     RewriteRule (.*) $1.php [L]
 
