Improvement: add some exception in profile filter file (files involved in icon cache)

--- a/ApplicationServer/windows/VFS/conf/profiles_filter.conf
+++ b/ApplicationServer/windows/VFS/conf/profiles_filter.conf
@@ -7,13 +7,16 @@
 - /CSIDL_APPDATA/Identities
 
 + /CSIDL_LOCAL_APPDATA
+- /CSIDL_LOCAL_APPDATA/IconCache.db
 - /CSIDL_LOCAL_APPDATA/Temp
 - /CSIDL_LOCAL_APPDATA/Cache
 - /CSIDL_LOCAL_APPDATA/Caches
 - /CSIDL_LOCAL_APPDATA/Temporary\ Internet\ Files
 - /CSIDL_LOCAL_APPDATA/History
 - /CSIDL_LOCAL_APPDATA/Credentials
+- /CSIDL_LOCAL_APPDATA/Microsoft/Windows/Explorer/thumbcache*
 - /CSIDL_LOCAL_APPDATA/Microsoft/Windows/UsrClass.dat*
+- /CSIDL_LOCAL_APPDATA/VirtualStore/ProgramData
 
 + /CSIDL_FAVORITES
 
