Improvement: new rsync rules preventing the thumcache export

--- a/ApplicationServer/windows/VFS/conf/profiles_filter.conf
+++ b/ApplicationServer/windows/VFS/conf/profiles_filter.conf
@@ -5,6 +5,7 @@
 - /CSIDL_APPDATA/Crypto
 - /CSIDL_APPDATA/ulteo
 - /CSIDL_APPDATA/Identities
+- /CSIDL_APPDATA/Microsoft/Windows/Explorer/thumbcache*
 
 + /CSIDL_LOCAL_APPDATA
 - /CSIDL_LOCAL_APPDATA/IconCache.db
