--- a/docs/img/premium/Makefile
+++ b/docs/img/premium/Makefile
@@ -2,9 +2,7 @@
 DATA=\
 	sm_add_license.png \
 	sm_install_premium.png \
-	sm_license_valid.png \
-	sm_soap_error.png \
-	sm_save_database.png \	
+	sm_license_valid.png
 
 all:
 
