--- a/ApplicationServer/linux/rufs/conf/FSBackend.conf
+++ b/ApplicationServer/linux/rufs/conf/FSBackend.conf
@@ -18,7 +18,7 @@ sharesQuotaGrace = 10K
 
 
 [log]
-level = DEBUG
+level = INFO
 program = RegularUnionFS
 enableDevelOutput = true
 enableStdOutput = true
