Bugfix: AppData is stored in data profile part

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -8,8 +8,8 @@ union = configuration, data, volatile
 [translation]
 Desktop = "%{CSIDL_DESKTOP}"
 Documents= "%{CSIDL_PERSONAL}"
-CSIDL_APPDATA = "%{CSIDL_APPDATA}"
-CSIDL_LOCAL_APPDATA = "%{CSIDL_LOCAL_APPDATA}"
+CSIDL_APPDATA = "AppData\Roaming"
+CSIDL_LOCAL_APPDATA = "AppData\Local"
 CSIDL_TEMPLATES = "%{CSIDL_TEMPLATES}"
 
 [log]
@@ -28,6 +28,7 @@ volatile = "${USERPROFILE}\WINDOWS\.*"
 volatile = "%{CSIDL_STARTMENU}\.*"
 volatile = "%{CSIDL_INTERNET_CACHE}.*"
 configuration = "%{CSIDL_TEMPLATES}.*"
+configuration = "AppData.*"
 volatile = "%{CSIDL_DESKTOP}\.*lnk"
 volatile = "%{CSIDL_DESKTOP}\.*ini"
 configuration = "%{CSIDL_FAVORITES}.*"
