Remove default debug log from slaveservers

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -16,7 +16,7 @@ roles =
 # can be error, warn, info, debug
 # multi occurence of 'debug' are allowed to enable deeper debug messages
 # "*" pattern is an alias to error, warn, info and debug
-level = error warn info debug
+level = error warn info
 # file =
 # the log file to use. Default is autodetect
 # 
