--- a/packaging/debian/ovd-native-client/lucid/control
+++ b/packaging/debian/ovd-native-client/lucid/control
@@ -9,7 +9,7 @@ Package: ulteo-ovd-native-client
 Architecture: all
 Depends: default-jre | sun-java6-jre, libgetopt-java, liblog4j1.2-java,
  libcommons-httpclient-java, libovd-xclient-area, desktop-file-utils, xdg-utils,
-Recommends: ulteo-ovd-integrated-launcher, libovd-smartcard, libovd-accelerator
+Recommends: ulteo-ovd-integrated-launcher, libovd-smartcard, libovd-accelerator, ulteo-ovd-l10n
 Description: Ulteo Open Virtual Desktop - native client
  This application is used in the Open Virtual Desktop to display the user
  session and launch applications via a native client.
