--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
- Copyright (C) 2008-2013 Ulteo SAS
+ Copyright (C) 2008-2014 Ulteo SAS
  http://www.ulteo.com
  Author Gauvain POCENTEK <gpocentek@linutop.com> 2008-2009
  Author Julien LANGLOIS <julien@ulteo.com> 2009-2010
@@ -10,7 +10,7 @@
  Author David LECHEVALIER <david@ulteo.com> 2010, 2013
  Author Guillaume DUPAS <guillaume@ulteo.com> 2010
  Author Yann HODIQUE <y.hodique@ulteo.com> 2012
- Author David PHAM-VAN <d.pham-van@ulteo.com> 2012, 2013
+ Author David PHAM-VAN <d.pham-van@ulteo.com> 2012, 2013, 2014
  Author Vincent ROULLIER <v.roullier@ulteo.com> 2013
  
  This program is free software; you can redistribute it and/or
@@ -186,6 +186,10 @@
         <attribute name="Main-Class" value="org.ulteo.ovd.integrated.Launcher"/>
       </manifest>
     </jar>
+    <signjar keystore="${keystore.path}" storepass="${keystore.password}" alias="${keystore.alias}"
+             destdir="jars" >
+        <fileset dir="jars" includes="ovdIntegratedLauncher.jar" />
+    </signjar>
   </target>
 
 
