Bugfix : #898 IE11 support for JsFramework

--- a/client/web/web/media/script/uovd/provider/rdp/html5/guacamole/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/rdp/html5/guacamole/Makefile.am
@@ -1,4 +1,5 @@
 scripts_DATA = encodings.js \
+               base64.js \
                exttunnel.js \
                guacamole.js \
                keyboard.js \
