Improvement: do not authorize session manager update if the session manager is not in maintenance

--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -99,6 +99,7 @@ scripts/Makefile
 web/Makefile
 web/client/Makefile
 web/crons/Makefile
+web/tools/Makefile
 web/webservices/Makefile
 web/modules/Makefile
 web/modules/SessionManagement/Makefile
