--- a/SessionManager/web/Makefile.am
+++ b/SessionManager/web/Makefile.am
@@ -7,6 +7,7 @@ SUBDIRS = admin \
           modules \
           PEAR \
           $(MAYBE_PREMIUM) \
+          tools \
           webservices
 
 scriptsdir = $(datadir)/ulteo/sessionmanager
