Bugfix #878: Session Manager is broken when DB scheme changed after an upgrade until the administrator re-save the configuration

--- a/SessionManager/web/tools/Makefile.am
+++ b/SessionManager/web/tools/Makefile.am
@@ -1,4 +1,5 @@
-scripts_DATA = can_update.php
+scripts_DATA = can_update.php \
+               update_database.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/tools
 
