--- a/SessionManager/web/tools/Makefile.am
+++ b/SessionManager/web/tools/Makefile.am
@@ -1,5 +1,6 @@
 scripts_DATA = can_update.php \
-               update_database.php
+               update_database.php \
+               update_wsdl_cache.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/tools
 
