Add Basque support and translation for client part

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -76,6 +76,7 @@ scripts_DATA = ad.png \
                es.png \
                es-es.png \
                et.png \
+               eu-es.png \
                fa-ir.png \
                fam.png \
                fi.png \
