Add Swedish support and translation for client part

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -217,7 +217,7 @@ scripts_DATA = ad.png \
                sq.png \
                sr.png \
                st.png \
-               sv.png \
+               sv-se.png \
                sy.png \
                sz.png \
                tc.png \
