--- a/AdminConsole/configure.ac.in
+++ b/AdminConsole/configure.ac.in
@@ -84,6 +84,7 @@ Makefile
 config/Makefile
 classes/Makefile
 includes/Makefile
+tools/Makefile
 web/Makefile
 web/ajax/Makefile
 web/media/script/Makefile
@@ -94,7 +95,6 @@ web/media/script/lib/prototype/Makefile
 web/media/script/lib/scriptaculous/Makefile
 web/media/script/lib/Makefile
 web/media/style/Makefile
-web/tools/Makefile
 web/media/image/loadbalancing/Makefile
 web/media/image/menu/Makefile
 web/media/image/Makefile
