--- a/ApplicationServer/windows/ukbrdr/src/main/CMakeLists.txt
+++ b/ApplicationServer/windows/ukbrdr/src/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE SOURCE_FILE *.cpp)
 
-add_executable(imer ${SOURCE_FILE})
-target_link_libraries(imer vchannel)
+add_executable(ukbrdr ${SOURCE_FILE})
+target_link_libraries(ukbrdr vchannel)
 
-install(TARGETS imer DESTINATION .)
+install(TARGETS ukbrdr DESTINATION .)
 
