Improvement: IME status is forwarded to Keyboard Application

--- a/ApplicationServer/windows/ukbrdr/src/main/CMakeLists.txt
+++ b/ApplicationServer/windows/ukbrdr/src/main/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE SOURCE_FILE *.cpp)
 
-add_executable(ukbrdr ${SOURCE_FILE})
+add_executable(ukbrdr WIN32 ${SOURCE_FILE})
 target_link_libraries(ukbrdr vchannel)
 
 install(TARGETS ukbrdr DESTINATION .)
