Improvement: change vchannel library name in order to not have confict with seamless vchannel library

--- a/ApplicationServer/windows/ukbrdr/src/vchannel/CMakeLists.txt
+++ b/ApplicationServer/windows/ukbrdr/src/vchannel/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB_RECURSE VCHANNEL_FILE *.c)
 
-add_library(vchannel SHARED ${VCHANNEL_FILE})
-target_link_libraries(vchannel wtsapi32)
+add_library(vchannelb SHARED ${VCHANNEL_FILE})
+target_link_libraries(vchannelb wtsapi32)
 
 
-install(TARGETS vchannel RUNTIME DESTINATION .)
+install(TARGETS vchannelb RUNTIME DESTINATION .)
 
