Fix for bug 589 introduced in d9f0106036dfee85e7174585e3ac553406ecadd3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -459,6 +459,7 @@
         <include name="keymaps/*" />
         <include name="scripts/*" />
         <include name="icons/**" />
+        <include name="externals/**" />
         <include name="po/*" />
         <include name="misc/**" />
         <include name="windowsPathsJNI/*" />
