Improvement: add packaging for IME and ukbrdr channel deployment

--- a/packaging/windows/setup-aps/setup.conf
+++ b/packaging/windows/setup-aps/setup.conf
@@ -13,6 +13,7 @@ arch:
         - ovd-java-jni
         - ovd-shells
         - seamlessrdpshell
+        - ukbrdr
     
       extern:
         - pngutils
@@ -34,6 +35,10 @@ arch:
     vcredist:
       extern:
         - vcredist
+    
+    ime:
+      packages:
+        - IME
     
     printer:
       childs:
