--- a/packaging/linux/ovd-java-jni-64/package.conf
+++ b/packaging/linux/ovd-java-jni-64/package.conf
@@ -10,6 +10,9 @@ pre_sources_commads:
   - javac -sourcepath @SVN_ROOT@/client/java/src @SVN_ROOT@/client/java/src/org/ulteo/utils/jni/LinuxSessionStatus.java
   - javah -classpath @SVN_ROOT@/client/java/src -d ./src/ org.ulteo.utils.jni.LinuxSessionStatus
 
+  - javac -sourcepath @SVN_ROOT@/client/java/src @SVN_ROOT@/client/java/src/org/ulteo/utils/jni/UkbrdrForward.java
+  - javah -classpath @SVN_ROOT@/client/java/src -d ./src/ org.ulteo.utils.jni.UkbrdrForward
+
 compile_commands:
   - make -s STATIC=yes
 
