Feature: Add custom setting to create and destroy a Linux system user

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -49,8 +49,16 @@ level = error warn info
 # use this group name to give user's fuse permissions on the system
 # default is fuse
 #
+# linux_set_password = 
+# use this command to set the user password on the system
+# default is passwd -r files "%s"
+#
+# linux_unset_password = 
+# use this command to disable the user access on the system
+# default is passwd -r files -d "%s"
+#
 # override_password_method = [unix|custom]
-# unix: use passwd -r files
+# unix: use linux_set_password / linux_unset_password commands
 # custom: usefull when using local account method with LDAP users and SSO
 # To use this method, first install libpam-pwdfile and apache2-utils packages
 # Then add a first rule in xrdp PAM configuration (/etc/pam.d/xrdp-sesman):
