--- a/packaging/debian/ovd-slaveserver-gateway/lucid/rules
+++ b/packaging/debian/ovd-slaveserver-gateway/lucid/rules
@@ -1,7 +1,11 @@
 #!/usr/bin/make -f
 
-DEB_PYTHON_SYSTEM := pycentral
-DEB_PYTHON_COMPILE_VERSION = 2.6
+ifneq ("$(wildcard /usr/bin/pycentral)","")
+	DEB_PYTHON_SYSTEM := pycentral
+	DEB_PYTHON_COMPILE_VERSION = 2.6
+else
+	DEB_PYTHON2_MODULE_PACKAGES = ulteo-ovd-slaveserver-role-gateway
+endif
 
 DEB_PYTHON_DESTDIR = debian/tmp
 DEB_DH_INSTALL_SOURCEDIR = debian/tmp
