--- a/packaging/debian/ovd-java-clients/lucid/control
+++ b/packaging/debian/ovd-java-clients/lucid/control
@@ -2,7 +2,7 @@ Source: ovd-java-clients
 Section: utils
 Priority: optional
 Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
-Build-Depends: debhelper (>= 6), cdbs, ulteo-ovd-cert,
+Build-Depends: debhelper (>= 6), cdbs,
  default-jdk, ant, ant-optional, mingw32, libx11-dev, libjpeg62-dev, cmake,  icedtea-plugin | icedtea6-plugin
 Standards-Version: 3.8.2
 
