--- a/packaging/debian/ovd-shells/lucid/rules
+++ b/packaging/debian/ovd-shells/lucid/rules
@@ -1,7 +1,11 @@
 #!/usr/bin/make -f
 
-DEB_PYTHON_SYSTEM := pycentral
-DEB_PYTHON_COMPILE_VERSION = 2.6
+ifneq ("$(wildcard /usr/bin/pycentral)","")
+	DEB_PYTHON_SYSTEM := pycentral
+	DEB_PYTHON_COMPILE_VERSION = 2.6
+else
+	DEB_PYTHON2_MODULE_PACKAGES = ulteo-ovd-shells
+endif
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
