--- a/packaging/debian/ovd-slaveserver-gateway/lucid/control
+++ b/packaging/debian/ovd-slaveserver-gateway/lucid/control
@@ -3,9 +3,10 @@ Section: net
 Priority: extra
 Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
 Build-Depends: cdbs, debhelper (>= 6),
- python (>= 2.6), python-central
+ python (>= 2.6), python-central | dh-python
 Standards-Version: 3.7.3
 XS-Python-Version: >= 2.6
+X-Python-Version: >= 2.6
 
 Package: ulteo-ovd-slaveserver-role-gateway
 Architecture: all
