--- a/SessionManager/web/modules/AuthMethod/Makefile.am
+++ b/SessionManager/web/modules/AuthMethod/Makefile.am
@@ -1,6 +1,7 @@
 scripts_DATA = CAS.php \
                Password.php \
                RemoteUser.php \
+               SAML2.php \
                Token.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/AuthMethod
