--- a/SessionManager/web/PEAR/Makefile.am
+++ b/SessionManager/web/PEAR/Makefile.am
@@ -4,4 +4,93 @@ scripts_DATA = CAS.php Mail.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR
 
-EXTRA_DIST = $(scripts_DATA)
+
+saml_scripts_DATA = php-saml/_toolkit_loader.php
+
+saml_scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR/php-saml
+
+
+saml_lib_scripts_DATA = php-saml/lib/Saml2/Auth.php \
+                        php-saml/lib/Saml2/AuthnRequest.php \
+                        php-saml/lib/Saml2/Constants.php \
+                        php-saml/lib/Saml2/Error.php \
+                        php-saml/lib/Saml2/LogoutRequest.php \
+                        php-saml/lib/Saml2/LogoutResponse.php \
+                        php-saml/lib/Saml2/Metadata.php \
+                        php-saml/lib/Saml2/Response.php \
+                        php-saml/lib/Saml2/Settings.php \
+                        php-saml/lib/Saml2/Utils.php
+
+saml_lib_scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR/php-saml/lib/Saml2
+
+
+saml_lib_schema_scripts_DATA = php-saml/lib/Saml2/schemas/WS-Trust.xsd \
+                               php-saml/lib/Saml2/schemas/cs-sstc-schema-assertion-1.1.xsd \
+                               php-saml/lib/Saml2/schemas/cs-sstc-schema-protocol-1.1.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-assertion-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-auth-telephony-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-ip-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-ippword-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-kerberos-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-mobileonefactor-reg-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-mobileonefactor-unreg-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-mobiletwofactor-reg-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-mobiletwofactor-unreg-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-nomad-telephony-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-personal-telephony-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-pgp-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-ppt-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-pword-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-session-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-smartcard-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-smartcardpki-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-softwarepki-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-spki-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-srp-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-sslcert-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-telephony-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-timesync-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-types-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-x509-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-authn-context-xmldsig-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-dce-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-ecp-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-metadata-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-protocol-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-x500-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/saml-schema-xacml-2.0.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-afp-mf-basic.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-afp-mf-saml.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-afp.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-attribute-map.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-native-sp-config.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-native-sp-protocols.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-2.0-sp-notify.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth-metadata-1.0.xsd \
+                               php-saml/lib/Saml2/schemas/shibboleth.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-metadata-attr.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-request-initiation.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-attribute-ext.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-delegation.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-idp-discovery.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-metadata-algsupport-v1.0.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-metadata-ext-query.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-metadata-ui-v1.0.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml-protocol-ext-thirdparty.xsd \
+                               php-saml/lib/Saml2/schemas/sstc-saml1x-metadata.xsd \
+                               php-saml/lib/Saml2/schemas/xenc-schema.xsd \
+                               php-saml/lib/Saml2/schemas/xml.xsd \
+                               php-saml/lib/Saml2/schemas/xmldsig-core-schema.xsd \
+                               php-saml/lib/Saml2/schemas/xmlsoap.xsd
+
+saml_lib_schema_scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR/php-saml/lib/Saml2/schemas
+
+
+extlib_scripts_DATA = php-saml/extlib/xmlseclibs/xmlseclibs.php
+
+extlib_scriptsdir = $(datadir)/ulteo/sessionmanager/PEAR/php-saml/extlib/xmlseclibs
+
+
+DIST_SUBDIRS=$(SUBDIRS)
+EXTRA_DIST = $(scripts_DATA) $(saml_scripts_DATA) $(saml_lib_scripts_DATA) $(saml_lib_schema_scripts_DATA) $(extlib_scripts_DATA)
