--- a/client/web/configure.ac.in
+++ b/client/web/configure.ac.in
@@ -98,6 +98,7 @@ web/Makefile
 web/applet/Makefile
 web/auth/Makefile
 web/auth/cas/Makefile
+web/auth/saml2/Makefile
 web/classes/Makefile
 web/includes/Makefile
 web/media/Makefile
